tests/ui/extoption_env-too-many-args.stderr
error: option_env! takes 1 argument
  --> $DIR/extoption_env-too-many-args.rs:1:13
   |
LL | fn main() { option_env!("one", "two"); }
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

